--- a/MineSweeper/Base.lproj/Main.storyboard
+++ b/MineSweeper/Base.lproj/Main.storyboard
@@ -68,21 +68,80 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FHE-Y2-jYU">
-                                <rect key="frame" x="42" y="45" width="34" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Back"/>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="PigeonFish" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7M-AE-j0E">
-                                <rect key="frame" x="110" y="45" width="155" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                <color key="textColor" red="0.86274509803921573" green="0.44313725490196076" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="q4i-R7-NiW" userLabel="Header Area">
+                                <rect key="frame" x="16" y="20" width="343" height="55"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="PigeonFish" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7M-AE-j0E">
+                                        <rect key="frame" x="129.5" y="9" width="84.5" height="36"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" red="0.86274509803921573" green="0.44313725490196076" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FHE-Y2-jYU">
+                                        <rect key="frame" x="8" y="12" width="34" height="30"/>
+                                        <state key="normal" title="Back"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="FHE-Y2-jYU" firstAttribute="centerY" secondItem="q4i-R7-NiW" secondAttribute="centerY" id="Rzy-CK-vyz"/>
+                                    <constraint firstItem="FHE-Y2-jYU" firstAttribute="leading" secondItem="q4i-R7-NiW" secondAttribute="leading" constant="8" id="ec1-AB-R2q"/>
+                                    <constraint firstItem="x7M-AE-j0E" firstAttribute="centerY" secondItem="q4i-R7-NiW" secondAttribute="centerY" id="qwY-MZ-Eip"/>
+                                    <constraint firstItem="x7M-AE-j0E" firstAttribute="centerX" secondItem="q4i-R7-NiW" secondAttribute="centerX" id="rQ2-w0-rDN"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w3c-4j-3z9" userLabel="Counters Area">
+                                <rect key="frame" x="16" y="83" width="343" height="213"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OOX-oh-GKi" userLabel="Timer Area">
+                                        <rect key="frame" x="8" y="8" width="165" height="197"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BBX-hS-Rso" userLabel="Timer Icon">
+                                                <rect key="frame" x="8" y="8" width="149" height="128"/>
+                                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="BBX-hS-Rso" firstAttribute="leading" secondItem="OOX-oh-GKi" secondAttribute="leading" constant="8" id="7Df-vf-9VP"/>
+                                            <constraint firstItem="BBX-hS-Rso" firstAttribute="centerX" secondItem="OOX-oh-GKi" secondAttribute="centerX" id="Q25-oL-tBJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="BBX-hS-Rso" secondAttribute="trailing" constant="8" id="QBd-Pj-HhT"/>
+                                            <constraint firstItem="BBX-hS-Rso" firstAttribute="top" secondItem="OOX-oh-GKi" secondAttribute="top" constant="8" id="pfc-fo-njC"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZvC-cb-T8Z" userLabel="Flag Area">
+                                        <rect key="frame" x="189" y="8" width="146" height="197"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YpL-vS-qsP">
+                                                <rect key="frame" x="8" y="8" width="130" height="128"/>
+                                                <color key="backgroundColor" red="0.86274509799999999" green="0.4431372549" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.86274509799999999" green="0.4431372549" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="YpL-vS-qsP" secondAttribute="trailing" constant="8" id="6JF-ge-unJ"/>
+                                            <constraint firstItem="YpL-vS-qsP" firstAttribute="leading" secondItem="ZvC-cb-T8Z" secondAttribute="leading" constant="8" id="bVo-tE-tlH"/>
+                                            <constraint firstItem="YpL-vS-qsP" firstAttribute="centerX" secondItem="ZvC-cb-T8Z" secondAttribute="centerX" id="cjU-wM-4uG"/>
+                                            <constraint firstItem="YpL-vS-qsP" firstAttribute="top" secondItem="ZvC-cb-T8Z" secondAttribute="top" constant="8" id="jpQ-3b-4Z2"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="OOX-oh-GKi" firstAttribute="trailing" secondItem="ZvC-cb-T8Z" secondAttribute="trailing" id="1j9-KA-2tV"/>
+                                    <constraint firstItem="ZvC-cb-T8Z" firstAttribute="centerY" secondItem="w3c-4j-3z9" secondAttribute="centerY" id="6Ob-go-RnF"/>
+                                    <constraint firstItem="ZvC-cb-T8Z" firstAttribute="width" secondItem="OOX-oh-GKi" secondAttribute="width" id="Pjm-pX-2NF"/>
+                                    <constraint firstItem="OOX-oh-GKi" firstAttribute="leading" secondItem="w3c-4j-3z9" secondAttribute="leading" constant="8" id="TPn-2b-cXs"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZvC-cb-T8Z" secondAttribute="trailing" constant="8" id="fN0-F3-1fJ"/>
+                                    <constraint firstItem="ZvC-cb-T8Z" firstAttribute="leading" secondItem="OOX-oh-GKi" secondAttribute="leading" id="oZf-iI-qQL"/>
+                                    <constraint firstItem="ZvC-cb-T8Z" firstAttribute="height" secondItem="OOX-oh-GKi" secondAttribute="height" id="teb-P6-Znt"/>
+                                    <constraint firstItem="OOX-oh-GKi" firstAttribute="centerY" secondItem="w3c-4j-3z9" secondAttribute="centerY" id="zMf-g9-sp1"/>
+                                </constraints>
+                            </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dvg-16-91a">
                                 <rect key="frame" x="16" y="304" width="343" height="343"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="dvg-16-91a" secondAttribute="height" multiplier="1:1" id="p6r-wb-GP8"/>
                                 </constraints>
@@ -112,6 +171,7 @@
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <gestureRecognizers/>
                                         <constraints>
                                             <constraint firstItem="fsj-e5-lLD" firstAttribute="centerX" secondItem="9SG-V7-M4V" secondAttribute="centerX" id="59g-bU-9Uw"/>
                                             <constraint firstItem="fsj-e5-lLD" firstAttribute="width" secondItem="9SG-V7-M4V" secondAttribute="width" id="BZl-Vy-emk"/>
@@ -131,19 +191,35 @@
                                 <connections>
                                     <outlet property="dataSource" destination="AZv-A0-8Wc" id="kSJ-WV-WjJ"/>
                                     <outlet property="delegate" destination="AZv-A0-8Wc" id="DWt-4e-8eu"/>
+                                    <outletCollection property="gestureRecognizers" destination="tji-2y-qep" appends="YES" id="YZ6-w5-D4G"/>
                                 </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="0.99607843137254903" green="0.94901960784313721" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="w3c-4j-3z9" firstAttribute="top" secondItem="q4i-R7-NiW" secondAttribute="top" id="DIR-1Z-Q1x"/>
+                            <constraint firstItem="q4i-R7-NiW" firstAttribute="leading" secondItem="x0d-0X-yiX" secondAttribute="leading" constant="16" id="EhE-iS-ya6"/>
                             <constraint firstItem="x0d-0X-yiX" firstAttribute="trailing" secondItem="dvg-16-91a" secondAttribute="trailing" constant="16" id="GIm-xf-xNa"/>
+                            <constraint firstItem="w3c-4j-3z9" firstAttribute="centerX" secondItem="x0d-0X-yiX" secondAttribute="centerX" id="Nlu-3K-1cN"/>
                             <constraint firstItem="x0d-0X-yiX" firstAttribute="bottom" secondItem="dvg-16-91a" secondAttribute="bottom" constant="20" id="Om2-2x-e60"/>
+                            <constraint firstItem="q4i-R7-NiW" firstAttribute="centerX" secondItem="x0d-0X-yiX" secondAttribute="centerX" id="SLd-lc-RpN"/>
                             <constraint firstItem="dvg-16-91a" firstAttribute="leading" secondItem="x0d-0X-yiX" secondAttribute="leading" constant="16" id="keV-XM-P9f"/>
+                            <constraint firstItem="x0d-0X-yiX" firstAttribute="trailing" secondItem="q4i-R7-NiW" secondAttribute="trailing" constant="16" id="qOW-Kj-fHi"/>
+                            <constraint firstItem="w3c-4j-3z9" firstAttribute="top" secondItem="q4i-R7-NiW" secondAttribute="top" id="tf0-Av-ehj"/>
+                            <constraint firstItem="q4i-R7-NiW" firstAttribute="top" secondItem="x0d-0X-yiX" secondAttribute="top" id="x68-Nz-mDd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="x0d-0X-yiX"/>
                     </view>
+                    <connections>
+                        <outlet property="gameCollectionView" destination="dvg-16-91a" id="Gw8-SL-r9q"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b2Z-nc-wxu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.80000000000000004" id="tji-2y-qep">
+                    <connections>
+                        <action selector="handleLongPress:" destination="AZv-A0-8Wc" id="vPC-H3-Et8"/>
+                    </connections>
+                </pongPressGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="856.79999999999995" y="133.5832083958021"/>
         </scene>
